# vocode-core

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
apps/hme/: README.md  app.py  pyproject.toml
apps/hme-test/: app.py
apps/hme/.docs/: summary.md
tests/streaming/hme/: test_hme_conversation.py  test_hme_output_device.py
vocode/: __init__.py  logging.py  meta.py
vocode/streaming/: streaming_conversation.py
vocode/streaming/action/: dtmf.py
vocode/streaming/agent/: base_agent.py
vocode/streaming/hme/: constants.py  conversation.py  events_manager.py  hme_conversation.py  hme_metrics.py  schema.py  state.py  websocket_connection.py
vocode/streaming/livekit/: audio_recorder.py  livekit_client_conversation.py
vocode/streaming/models/: agent.py  client_backend.py  synthesizer.py  telephony.py  transcriber.py
vocode/streaming/output_device/: abstract_output_device.py  blocking_speaker_output.py  hme_output_device.py  livekit_output_device.py  twilio_output_device.py
vocode/streaming/synthesizer/: azure_synthesizer.py  base_synthesizer.py  play_ht_synthesizer_v2.py
vocode/streaming/telephony/: templater.py
vocode/streaming/telephony/client/: abstract_telephony_client.py  twilio_client.py  vonage_client.py
vocode/streaming/telephony/config_manager/: base_dynamic_call_manager.py
vocode/streaming/telephony/conversation/: outbound_call.py  (+3 more)
vocode/streaming/transcriber/: assembly_ai_transcriber.py  base_transcriber.py  deepgram_transcriber.py
vocode/streaming/utils/: events_manager.py  worker.py
vocode/utils/: gen_encrypted_token.py
(+3 files in other folders)
